2008-10-06 Shlomi Fish <shlomif@iglu.org.il>
	* Applied a modified version of a patch by Anicka Bernathova
	<anicka@suse.cz>:
	{{{
	Previously IO-Socket-INET6 tried to bind even when one side
	is AF_INET and the other AF_INET6 and this cannot work.

	The FAMILY_CHECK loop is meant to make sure both sides have
	the same family.
	}}}
	* New Release IO-Socket-INET6-2.56

2008-09-24 Shlomi Fish <shlomif@iglu.org.il>
	* Fixed: http://rt.cpan.org/Ticket/Display.html?id=39550 :
	Problem with connect to IPv4 w/o given domain on FreeBSD6.1 (and
	other BSD systems). (Thanks to Steffen Ullrich)
	* New Release IO-Socket-INET6-2.55

2008-02-22 Shlomi Fish <shlomif@iglu.org.il>
	* Added pack_sockaddr_in6_all to the imports from Socket6 to fix
	the "configure" sub in several cases. Added t/configure6.t to test it.
	* New Release IO-Socket-INET6-2.54

2008-02-21 Shlomi Fish <shlomif@iglu.org.il>
	* Converted to Build.PL and placed INET6.pm under lib/.
	* Added a "repository" URL to the POD. 
	* Added the pod.t and pod-coverage.t files and we now have full POD
	coverage.
	* Added more dependencies to the Build.PL.
	* Added the credit of "Shlomi Fish".
	* Changed the email address of Rafael to the new one in the ChangeLog
	and README files.
	* Someone reported that sockflow() and peerflow() were broken. The reason
	for that was that unpack_sockaddr_in6_all was not imported from Socket6.
	This release fixes it (with tests in t/host6.t).
	* New Release IO-Socket-INET6-2.53

2008-02-05 Shlomi Fish <shlomif@iglu.org.il>

	* New Release IO-Socket-INET6-2.52
	* Added a test for peerhost() too.
	* Fixed sockhost() with the fact that inet_ntop() was not imported.
		- Added a test.
	* Added "use warnings" to IO::Socket::INET6.
	* Added a modified version of my patch (with more comments) to patch 
	the problems I found in IO-Socket-INET6. (generating 
	warnings upon using and failed tests.).

2004-18-10  Rafael Martinez Torres <rmartine@fdi.ucm.es>

	* New Release INET6-2.51 .